--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ATMSiteManagement
 spring.datasource.url=jdbc:mysql://localhost:3306/atm_management_system
 spring.datasource.username=root
-spring.datasource.password=Akshay@123
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
